Actualizacion de Chatbot, capturas, y recepcionista funcional en produccion, todo en la parte del servidor