@@ -1,13 +1,14 @@
 package ipn.escom.defensoria.catalogo_service.config;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -26,15 +27,28 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             String token = authHeader.substring(7);
-            String username = jwtUtil.extraerUsuario(token);
+            try {
+                String username = jwtUtil.extraerUsuario(token);
 
-            if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-                if (jwtUtil.validarToken(token, username)) {
-                    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                            username, null, Collections.emptyList()
-                    );
-                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+                    if (jwtUtil.validarToken(token, username)) {
+                        // Si el token trae claim "rol" (tokens de admin-service), se agrega
+                        // como autoridad ROLE_<rol> para que @PreAuthorize funcione en los
+                        // endpoints de administración del catálogo. Tokens de quejosos (sin
+                        // ese claim) quedan autenticados pero sin ningún rol.
+                        String rol = jwtUtil.extraerRol(token);
+                        List<SimpleGrantedAuthority> authorities = (rol != null)
+                                ? List.of(new SimpleGrantedAuthority("ROLE_" + rol))
+                                : List.of();
+
+                        UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                                username, null, authorities
+                        );
+                        SecurityContextHolder.getContext().setAuthentication(authentication);
+                    }
                 }
+            } catch (Exception ex) {
+                // Token corrupto/expirado -- se deja sin autenticar.
             }
         }
         filterChain.doFilter(request, response);
